minor ui changes

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="chat-container">
-    <div class="live-chat-heading">
+    <div class="live-chat-heading cursor-normal">
         <i class="material-icons">message</i>LIVE CHAT
     </div>
     <div class="messages" #messagesContainer>
