--- a/src/app/components/all-cases/all-cases.component.html
+++ b/src/app/components/all-cases/all-cases.component.html
@@ -120,8 +120,8 @@
   </div>
   <div class="footerCont">
     <div class="footerInner">
-        <p>© 2024, Medstream360, All Rights Reserved</p>
-        <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+        <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+        <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
     </div>
 </div>
 
