--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col-6"></div>
         </div>
-        <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
+        <div class="innercontainer cursor-normal" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
             <mat-card style="color: #FFFFFF;" *ngFor="let ops of filterdOperators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)">
                 <img mat-card-image [src]="ops.avatar" class="image">
              <div class="contBox">
@@ -105,8 +105,8 @@
 
 <div class="footerCont">
     <div class="footerInner">
-        <p>© 2024, Medstream360, All Rights Reserved</p>
-        <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+        <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+        <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
     </div>
 </div>
 
