--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1151,6 +1151,9 @@ border: none !important;
 .cursor-pointer{
   cursor: pointer;
 }
+.cursor-normal{
+  cursor: default;
+}
 .text-primary {
   color: #007bff !important;
 }
