--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -8,7 +8,7 @@
       <!-- <iframe style="width: 100%;" height="400" src="https://www.youtube.com/embed/1ozGKlOzEVc" frameborder="0" allowfullscreen></iframe> -->
       <iframe style="width: 100%;" height="600" [src]="videoURL" frameborder="0" allowfullscreen></iframe>
       <!-- <img [src]="current_case_dtls.thumbnail" style="width: 100%;" alt="Video Thumbnail"> -->
-      <div class="ml-3 mt-3">
+      <div class="ml-3 mt-3 cursor-normal">
         <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.title }}</p>
         <p *ngIf="!current_case_dtls.liveStatus" style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.weekNo}}{{current_case_dtls.weekNo==1?'st':current_case_dtls.weekNo==2?'nd':current_case_dtls.weekNo==3?'rd':'th'}}
           {{'Week of'}} {{ current_case_dtls.month | titlecase }},{{ current_case_dtls.year}}
@@ -21,8 +21,8 @@
     <div class="ml-3 mt-5" style="display: flex;">
       <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
       <div class="ml-2" style="display: block;">
-        <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;" (click)="routeToInstitute(current_case_dtls)">{{ current_case_dtls.institution.name }}</p>
-        <p style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.institution.city}},
+        <p class="cursor-pointer"  style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;" (click)="routeToInstitute(current_case_dtls)">{{ current_case_dtls.institution.name }}</p>
+        <p class="cursor-pointer" (click)="routeToInstitute(current_case_dtls)" style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.institution.city}},
           {{current_case_dtls.institution.country}} </p>
       </div>
       <button class="share_btn" (click)="share()">
@@ -96,7 +96,7 @@
 </div>
 <div class="footerCont">
   <div class="footerInner">
-      <p>© 2024, Medstream360, All Rights Reserved</p>
-      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+      <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+      <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
   </div>
 </div>
