--- a/src/app/components/institution/institution.component.html
+++ b/src/app/components/institution/institution.component.html
@@ -19,8 +19,8 @@
 
   <div class="footerCont">
     <div class="footerInner">
-        <p>© 2024, Medstream360, All Rights Reserved</p>
-        <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+        <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+        <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
     </div>
 </div>
  
