--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 cursor-normal">
       <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
     </div>
     <div class="col-md-4">
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div [ngSwitch]="view">
+  <div [ngSwitch]="view" class="cursor-normal">
     <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"
       [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)"
       (eventClicked)="handleEvent('Clicked', $event.event)">
@@ -181,7 +181,7 @@
 
 <div class="container">
   <div class="innercontainer">
-      <p>© 2024, Medstream360, All Rights Reserved</p>
-      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+      <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+      <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
   </div>
 </div>
