--- a/src/app/components/all-cases/all-cases.component.html
+++ b/src/app/components/all-cases/all-cases.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
     <div class="small-column">
       <div class="d-flex red_txt hide_filter" style="justify-content: center;" id="filter_icon" (click)="filterHide()">
-        Filter
+        Filters
         <mat-icon class="ml-2">filter_list</mat-icon>
       </div>
      
