--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -34,21 +34,22 @@
             <div class="section-b col-4 mb-5 filter_drp full-width">
                 <mat-select placeholder="Choose Institute" [formControl]="institutes" multiple (selectionChange)="applyTypeFilter()">
                     <mat-option *ngFor="let row of instituteList" [value]="row._id">{{row.name}}</mat-option>
-                  </mat-select>
+                </mat-select>
             </div>
             <div class="col-6"></div>
-        </div>
+        </div>   
         <div class="innercontainer cursor-normal" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
-            <mat-card style="color: #FFFFFF;" *ngFor="let ops of filterdOperators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)">
+            <mat-card style="color: #FFFFFF;" *ngFor="let ops of filterdOperators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)"  [ngClass]="{'mr-40': i === filterdOperators.length - 1}">
                 <img mat-card-image [src]="ops.avatar" class="image">
              <div class="contBox">
-                <mat-card-title>{{ops.name}} </mat-card-title><i>{{ops.designation}}</i>
+                <mat-card-title>{{ops.name}} </mat-card-title>
+                <!-- <i>{{ops.designation}}</i> -->
                 <mat-card-subtitle>
                     {{ops.institution.name}}
                 </mat-card-subtitle>
-                <mat-card-content class="text-wrap-example">
+                <!-- <mat-card-content class="text-wrap-example">
                     {{ops.introduction}}
-                </mat-card-content>
+                </mat-card-content> -->
              </div>
             <div class="icons">
                 <a *ngIf="ops.social_media_link?.fb" target="_blank" [href]="ops.social_media_link?.fb">
