--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -19,7 +19,8 @@
       <!-- </div> -->
     </div>
     <div class="ml-3 mt-5" style="display: flex;">
-      <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
+      <!-- <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p> -->
+      <img [src]="current_case_dtls.institution.image" style="border-radius: 50%;width: 50px; height: 50px;" alt="">
       <div class="ml-2" style="display: block;">
         <p class="cursor-pointer"  style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;" (click)="routeToInstitute(current_case_dtls)">{{ current_case_dtls.institution.name }}</p>
         <p class="cursor-pointer" (click)="routeToInstitute(current_case_dtls)" style="color: #FFFFFF80;;font-weight: 600;">{{current_case_dtls.institution.city}},
@@ -75,7 +76,9 @@
       <app-chat [pageId]="current_case_id"/>
     </div>
 
-    <img width="" class="full-width" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
+    <!-- AD -->
+
+    <!-- <img width="" class="full-width" src="../../assets/add_medicine.svg" alt="Video Thumbnail"> -->
 
 
     <div class="recommend-cards">
