--- a/src/app/components/experts/experts.component.scss
+++ b/src/app/components/experts/experts.component.scss
@@ -28,6 +28,9 @@
     // background-color: aquamarine;
     width: 85vw;
 }
+.mr-40{
+    margin-right: 40px !important;
+}
 .innercontainer{
     width: 100%;
     display: flex !important;
@@ -35,15 +38,17 @@
 }
 .expsCard{
     max-width: 310px;
-    height: 474px;
+    // height: 474px;
+    height: 400px;
     background-color: #2E2E2E;
     margin-bottom: 40px;
     display: grid;
     grid-template-rows: 1fr 1fr 0.2fr;
 }
 .filter_drp{
+    background-color: #2E2E2E;
     color: white;
-    border: 1px solid;
+    // border: 1px solid;
     border-radius: 8px;
     padding: 6px;
     float: right;
@@ -96,6 +101,9 @@ mat-card-content{
         // display: flex;
         // justify-content: center;
         // align-items: center;
+    }
+    .mr-40{
+        margin-right: 0px !important;
     }
     .innercontainer{
         display: flex;
