--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -148,11 +148,11 @@
     </div>
 
   </div>
-  <div class="ads">
+  <!-- <div class="ads">
     <div class="imgDiv">
       <img src="../../assets/Home_page_ads.svg" alt="">
     </div>
-  </div>
+  </div> -->
   <div class="widget_accordion">
     <app-home-carousel [caseOfTheWeekList]="caseOfTheWeekList"></app-home-carousel>
   </div>
