--- a/src/app/navbar/sidenav/sidenav.component.scss
+++ b/src/app/navbar/sidenav/sidenav.component.scss
@@ -8,19 +8,20 @@
   // border-bottom: 1px solid #fff;
 }
 
-.nav-links{
+.nav-links {
   margin: auto;
+
   a {
     color: #fff;
     text-decoration: none;
-    
+
   }
-} 
+}
 
 /* LOGO */
 .logo {
-position: relative;
-left: 35px;
+  position: relative;
+  left: 35px;
 }
 
 /* NAVBAR MENU */
@@ -112,14 +113,15 @@ input[type=checkbox] {
     left: 0;
     text-align: center;
     padding: 16px 0;
-    li{
+
+    li {
       display: flex;
       justify-content: center;
     }
   }
 
   .vertical-bar::before {
-   display: none;
+    display: none;
   }
 
   .menu li:hover {
@@ -180,7 +182,7 @@ mat-icon {
   margin-right: 5px;
 }
 
-.disFlex{
+.disFlex {
   display: flex !important;
 }
 
@@ -197,13 +199,21 @@ mat-icon {
       height: 2.375rem;
       padding-left: 2.5rem;
       padding-right: 2.5rem;
-      background-color: #141414;
-      color: rgb(126, 121, 121);
+      // background-color: #141414;
+      background-color: #2E2E2E;
+      // color: rgb(126, 121, 121);
+      color: #fff;
       transition: 0.3s ease;
       box-shadow: none;
       border-radius: 1.875rem;
-      outline: 0;
-      font-weight: 700;
+      // outline: 0;
+      outline: none;
+      border: none;
+      // font-weight: 700;
+
+      &::placeholder {
+        color: #fff; // light gray
+      }
     }
 
     .search-icon {
@@ -212,7 +222,8 @@ mat-icon {
       font-weight: 700;
       right: 0.813rem;
       top: 5px;
-      color: rgb(126, 121, 121);
+      // color: rgb(126, 121, 121);
+      color: #fff;
 
     }
   }
