--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1149,7 +1149,7 @@ border: none !important;
   color: #fff !important;
 }
 .cursor-pointer{
-  cursor: pointer;
+  cursor: pointer !important;
 }
 .text-primary {
   color: #007bff !important;
