--- a/src/app/comments/comment-action/comment-action.component.html
+++ b/src/app/comments/comment-action/comment-action.component.html
@@ -26,14 +26,14 @@
         (click)="  updateComment.emit({ like: true, commentId: comment.id })"
       >
       <mat-icon>thumb_up</mat-icon>
-      <span *ngIf="this.comment['dislikeCount']!=0">{{this.comment['likeCount']}}</span>
+      <span *ngIf="this.comment['likeCount']!=0">{{this.comment['likeCount']}}</span>
       </div>
       <div
         class="comment-action" [ngClass]="dislikeStyle ? '' : 'like_thumb'"
         (click)="  updateComment.emit({ like: false, commentId: comment.id })"
       >
       <mat-icon>thumb_down</mat-icon>
-      <span *ngIf="this.comment['likeCount']!=0">{{this.comment['dislikeCount']}}</span>
+      <span *ngIf="this.comment['dislikeCount']!=0">{{this.comment['dislikeCount']}}</span>
       </div>
         <div
           *ngIf="canReply"
