--- a/src/app/comments/comment-action/comment-action.component.html
+++ b/src/app/comments/comment-action/comment-action.component.html
@@ -9,28 +9,17 @@
         <div>{{ createdAt }}</div>
       </div>
       <div class="comment-text">{{ comment.body }}</div>
-      <!-- *ngIf="!isEditing()" -->
-      <!-- <app-comment-form
-        *ngIf="isEditing()"
-        submitLabel="Update"
-        [hasCancelButton]="true"
-        [initialText]="comment.body"
-        (handleSubmit)="
-          updateComment.emit({ text: $event, commentId: comment.id })
-        "
-        (handleCancel)="setActiveComment.emit(null)"
-      ></app-comment-form> -->
       <div class="comment-actions">
         <div
-        class="comment-action" [ngClass]="likeStyle ? '' : 'like_thumb'"
-        (click)="  updateComment.emit({ like: true, commentId: comment.id })"
+        class="comment-action" [ngClass]="likeStyles!=null && likeStyles ? '' : 'like_thumb'"
+        (click)="updateLike(true,'like');"
       >
       <mat-icon>thumb_up</mat-icon>
       <span *ngIf="this.comment['likeCount']!=0">{{this.comment['likeCount']}}</span>
       </div>
       <div
-        class="comment-action" [ngClass]="dislikeStyle ? '' : 'like_thumb'"
-        (click)="  updateComment.emit({ like: false, commentId: comment.id })"
+        class="comment-action" [ngClass]="likeStyles!=null && !likeStyles ? '' : 'like_thumb'"
+        (click)="updateLike(false,'dislike');"
       >
       <mat-icon>thumb_down</mat-icon>
       <span *ngIf="this.comment['dislikeCount']!=0">{{this.comment['dislikeCount']}}</span>
