--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -10,7 +10,7 @@
           (handleSubmit)="addComment($event,null,'post')"
         >
         </app-comment-form>
-        <!-- <div class="comment-actions">
+        <div class="comment-actions">
           <span *ngIf="getRootComments().length"
           class="comment-action view_Comment"
            (click)="canViewComment=!canViewComment">
@@ -18,10 +18,10 @@
           </span>
         </div>
       
-        <span *ngIf="getRootComments().length"
+        <span *ngIf="!getRootComments().length"
         class="comment-actions comment_1">
         To be the first comment.
-        </span> -->
+        </span>
         <ng-container *ngIf="!canViewComment">
           <div class="comments-container">
             <app-comment-action
@@ -35,7 +35,6 @@
               (deleteComment)="deleteComment($event)"
               [currentCaseId]="currentCaseId"
             >
-            <!-- (updateComment)="updateComment($event)" -->
             </app-comment-action>
           </div>
         </ng-container>
