--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -112,6 +112,11 @@
                 text-decoration: none;
             }
         }
+        hr {
+          border-color: #606060; // Set border color to white
+          border-width: 1px 0 0; // Set border width and style
+          width: 100vw; // Set width to fill the container
+        }
     }
   }
 
