--- a/src/app/components/experts/experts.component.scss
+++ b/src/app/components/experts/experts.component.scss
@@ -143,4 +143,9 @@ mat-card-content{
             }
         }
     }
+    hr {
+        border-color: white; // Set border color to white
+        border-width: 1px 0 0; // Set border width and style
+        width: 100vw; // Set width to fill the container
+      }
   }
