--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -170,8 +170,16 @@
 
   </div>
 </div>
-<div class="container">
+<!-- <div class="container">
   <div class="innercontainer">
+      <hr>
+      <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
+      <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+  </div>
+</div> -->
+<div class="footerCont">
+  <div class="footerInner">
+    <hr>
       <p class="cursor-normal">© 2024, Medstream360, All Rights Reserved</p>
       <p class="cursor-normal">Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
   </div>
