--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -32,8 +32,14 @@
     <div class="container">
         <div class="">
             <div class="section-b col-4 mb-5 filter_drp full-width">
-                <mat-select placeholder="Choose Institute" [formControl]="institutes" multiple (selectionChange)="applyTypeFilter()">
-                    <mat-option *ngFor="let row of instituteList" [value]="row._id">{{row.name}}</mat-option>
+                <mat-select placeholder="Choose Institute" [formControl]="institutes" multiple (selectionChange)="applyTypeFilter()"
+                (closed)="filteredInstituteList=instituteList">
+                    <mat-option>
+                        <ngx-mat-select-search placeholderLabel="Search..." noEntriesFoundLabel="No institutuion found" aria-hidden="true"
+                          (keyup)="onKey($event.target)">
+                        </ngx-mat-select-search>
+                      </mat-option>
+                    <mat-option *ngFor="let row of filteredInstituteList" [value]="row._id">{{row.name}}</mat-option>
                 </mat-select>
             </div>
             <div class="col-6"></div>
