--- a/src/app/components/institution/single-institute/single-institute.component.scss
+++ b/src/app/components/institution/single-institute/single-institute.component.scss
@@ -7,6 +7,7 @@
 .home_container {
   color: #fff !important;
   padding: 18px 48px;
+  min-height: calc(100vh - 233px);
 }
 
 .widget_accordion {
@@ -52,7 +53,7 @@
   color: #FF4E45 !important;
 }
 .footerCont{
-  margin-top: 30px;
+  // margin-top: 30px;
   height: 20vh;
   width: 100%;
   display: flex;
