--- a/src/app/components/experts/single-expert/single-expert.component.html
+++ b/src/app/components/experts/single-expert/single-expert.component.html
@@ -2,7 +2,7 @@
 <!-- <div class="mainContainer" style="    display: flex;justify-content: center;width: 100%;height: 100%;">
     <div class="container">
         <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
-            <mat-card style="color: #FFFFFF;" *ngFor="let ops of filterdOperators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)"  [ngClass]="{'mr-0': i === filterdOperators.length - 1}">
+            <mat-card style="color: #FFFFFF;" *ngFor="let  of filterdOperators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)"  [ngClass]="{'mr-0': i === filterdOperators.length - 1}">
                 <img mat-card-image [src]="ops.avatar" class="image">
              <div class="contBox">
                 <mat-card-title>{{ops.name}} </mat-card-title>
@@ -38,15 +38,16 @@
                     ngClass.gt-xs="ml-10">
                     <mat-card fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)"
                         fxFlex.gt-md="0 1 calc(25%-20px)">
-                        <img mat-card-image src="../../../../assets/africa.png" class="image">
+                        <!-- <img mat-card-image src="../../../../assets/africa.png" class="image"> -->
+                        <img mat-card-image [src]="single_ops_details.avatar" class="image">
                         <div class="contBox">
                             <mat-card-title>
-                                <!-- {{ops.name}} -->
-                                Test Operator
+                                {{single_ops_details.name}}
+                                <!-- Test Operator -->
                             </mat-card-title>
                             <mat-card-subtitle>
-                                <!-- {{ops.designation}} -->
-                                Test Designation
+                                {{single_ops_details.designation}}
+                                <!-- Test Designation -->
                             </mat-card-subtitle>
                         </div>
                     </mat-card>
@@ -56,24 +57,30 @@
         <div>
         </div>
         <div class="box2">
+            <div>
+               
+            </div>
             <div class="inner-bio-details">
                 <div>
+                    <h5>OPERATOR DETAILS</h5>
+                    <hr style="color: #FF4E45;">
                     <div class="flexBox">
                         <h6><b>INSTITUTION NAME:</b></h6>
-                        <p><mat-icon>location_on</mat-icon> Test Institution</p>
+                        <p><mat-icon style="color: #FF4E45;">location_on</mat-icon> {{single_ops_details.institution.name}}</p>
                     </div>
-                    <div class="flexBox">
+                    <div class="flexBox1">
                         <h6><b>BIO:</b></h6>
-                        <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium perspiciatis eligendi
+                        <!-- <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium perspiciatis eligendi
                             ratione, dolores delectus fugiat libero? Distinctio enim, pariatur natus doloremque adipisci
                             voluptatem culpa laboriosam ipsum illo eius? Deserunt error itaque inventore, aliquid quae cum
                             provident odio at, quasi est pariatur amet perferendis repudiandae earum, numquam perspiciatis
                             adipisci sit rem unde ad iste alias fuga fugiat neque. Harum eligendi ut error provident aliquam
-                            distinctio, sit eos qui veniam. Maiores laboriosam incidunt ipsam labore nesciunt! Molestias</p>
+                            distinctio, sit eos qui veniam. Maiores laboriosam incidunt ipsam labore nesciunt! Molestias</p> -->
+                            <p style="text-align: justify;">{{single_ops_details.introduction}}</p>
                     </div>
                 </div>
                 <div class="iconDiv">
-                    <div class="icons">
+                    <!-- <div class="icons">
                         <a target="_blank" [href]="">
                             <fa-icon [icon]="facebook" class="icon"></fa-icon>
                         </a>
@@ -85,6 +92,20 @@
                         </a>
                         <a target="_blank" [href]="">
                             <fa-icon [icon]="twitterX" class="icon"></fa-icon>
+                        </a>
+                    </div> -->
+                    <div class="icons">
+                        <a *ngIf="single_ops_details.social_media_link?.fb" target="_blank" [href]="single_ops_details.social_media_link?.fb">
+                          <fa-icon [icon]="facebook" class="icon"></fa-icon>
+                        </a>
+                        <a *ngIf="single_ops_details.social_media_link?.twitter" target="_blank" [href]="single_ops_details.social_media_link?.twitter">
+                          <fa-icon [icon]="twitterX" class="icon"></fa-icon>
+                        </a>
+                        <a *ngIf="single_ops_details.social_media_link?.insta" target="_blank" [href]="single_ops_details.social_media_link?.insta">
+                          <fa-icon [icon]="instagram" class="icon"></fa-icon>
+                        </a>
+                        <a *ngIf="single_ops_details.social_media_link?.linkedIn" target="_blank" [href]="single_ops_details.social_media_link?.linkedIn">
+                          <fa-icon [icon]="linkedIn" class="icon"></fa-icon>
                         </a>
                     </div>
                 </div>
