--- a/src/app/components/experts/single-expert/single-expert.component.scss
+++ b/src/app/components/experts/single-expert/single-expert.component.scss
@@ -23,6 +23,14 @@
         margin-left: 40px;
     }
 }
+.flexBox1{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+    p{
+        margin-left: 70px;
+    }
+}
 .mr-0{
     margin-right: 40px !important;
 }
