operator single page responsive

--- a/src/app/components/experts/single-expert/single-expert.component.html
+++ b/src/app/components/experts/single-expert/single-expert.component.html
@@ -66,7 +66,7 @@
                     <hr style="color: #FF4E45;">
                     <div class="flexBox">
                         <h6><b>INSTITUTION NAME:</b></h6>
-                        <p><mat-icon style="color: #FF4E45;">location_on</mat-icon> {{single_ops_details.institution.name}}</p>
+                        <p><mat-icon style="color: #FF4E45; padding-top: 8px !important; font-size: 16px;">location_on</mat-icon> {{single_ops_details.institution.name}}</p>
                     </div>
                     <div class="flexBox1">
                         <h6><b>BIO:</b></h6>
