--- a/src/app/components/experts/single-expert/single-expert.component.scss
+++ b/src/app/components/experts/single-expert/single-expert.component.scss
@@ -107,7 +107,7 @@ mat-card-content{
     justify-content: flex-end;
 }
 .icons{
-    width: 30%;
+    width: 20%;
     padding: 20px !important;
     font-size: 18px;
     display: flex !important;
@@ -115,7 +115,8 @@ mat-card-content{
     justify-content: space-between;
     a{
         // background-color: #fff;
-        color: #fff !important;
+        // color: #fff !important;
+        color: #FF4E45;
     }
 }
 .icon{
