--- a/src/app/components/experts/single-expert/single-expert.component.html
+++ b/src/app/components/experts/single-expert/single-expert.component.html
@@ -31,6 +31,11 @@
 
 
 <div class="mainDiv" style="color: #FFFFFF;">
+    <div>
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="default" color="#FF4E45" type="ball-beat" [fullScreen]="true">
+            <p style="color: white"> Fetching data ... </p>
+        </ngx-spinner>
+    </div>
     <div class="container">
         <div class="box1">
             <div class="expsCard">
