--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -53,4 +53,10 @@
             </form>
         </div>
     </div>
+
+    <div>
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="default" color="#FF4E45" type="ball-beat" [fullScreen]="true">
+            <p style="color: white"> Fetching data ... </p>
+        </ngx-spinner>
+      </div>
 </div>
