--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -44,6 +44,11 @@
             </mat-card>
           </div>
     </div>
+    <div>
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="default" color="#FF4E45" type="ball-beat" [fullScreen]="true">
+            <p style="color: white"> Fetching data ... </p>
+        </ngx-spinner>
+    </div>
 </div> 
 
 <!-- <div class="mainContainer" style="display: flex; justify-content: center; width: 100%; height: 100%;">
