--- a/src/app/components/institution/single-institute/single-institute.component.html
+++ b/src/app/components/institution/single-institute/single-institute.component.html
@@ -62,7 +62,11 @@
           </div>
         </div>
       </div>
-    
+      <div>
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="default" color="#FF4E45" type="ball-beat" [fullScreen]="true">
+            <p style="color: white"> Fetching data ... </p>
+        </ngx-spinner>
+    </div>
 </div>
 <div class="footerCont">
   <div class="footerInner">
