--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -119,10 +119,13 @@
   justify-content: center;
 }
 .carousel_btn{
-  width: 12px;
-  height: 12px;
+  // width: 12px;
+  // height: 12px;
+  width: 14px;
+  height: 14px;
   border-radius: 50%;
-  margin-right: 8px;
+  // margin-right: 8px;
+  margin-right: 10px;
   border: none;
 }
 .carousel_active{
