--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
   <div class="get_started">
     <div class="">
       <img class="col-12 cur_pointer" routerLink='/user/schedule' 
-      src="../../assets/Hero Page.svg"
+      src="../../assets/Hero Page.sv"
        alt="medstream landing image"
        fetchpriority="high">
       <div class="getStartedCont">
