--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,21 +39,22 @@
       <label class="flex_align cursor-normal">No upcoming videos</label>
     </div>
     <div *ngIf="scheduleVideo.length!=0">
-      <div class="col-12 schedule_flex" role="listbox">
-        <iframe role="option" class="map col-7" style="border:0" title="map" [src]="mapURL" frameborder="0"
+      <!-- role="listbox" -->
+      <div class="col-12 schedule_flex" >
+        <iframe class="map col-7" style="border:0" title="map" [src]="mapURL" frameborder="0"
           allowfullscreen></iframe>
         <div class="col-5 ml-3">
-          <img class="mb-2 col-12 cur_pointer" role="option" (click)="enrouteCase(scheduleVideo,'scheduleCase')" src="{{ scheduleVideo.thumbnail}}" alt="slide">
-          <p class="cur_pointer" role="option" (click)="enrouteCase(scheduleVideo,'scheduleCase')">{{scheduleVideo.title}}</p>
-          <p class="cur_pointer" role="option" (click)="enrouteCase(scheduleVideo,'scheduleCase')" style="color: #FFFFFF80;;font-weight: 600;">{{ scheduleVideo.createdAt | date:'longDate'
+          <img class="mb-2 col-12 cur_pointer"  (click)="enrouteCase(scheduleVideo,'scheduleCase')" src="{{ scheduleVideo.thumbnail}}" alt="slide">
+          <p class="cur_pointer" (click)="enrouteCase(scheduleVideo,'scheduleCase')">{{scheduleVideo.title}}</p>
+          <p class="cur_pointer"  (click)="enrouteCase(scheduleVideo,'scheduleCase')" style="color: #FFFFFF80;;font-weight: 600;">{{ scheduleVideo.createdAt | date:'longDate'
             }}</p>
-          <div class="cur_pointer" role="option" (click)="enrouteCase(scheduleVideo,'scheduleCase')" style="display: flex;">
-            <p role="option" style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
-            <div role="option" class="ml-2" style="display: block;">
-              <p role="option" style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{scheduleVideo.institution ?
+          <div class="cur_pointer"  (click)="enrouteCase(scheduleVideo,'scheduleCase')" style="display: flex;">
+            <p  style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
+            <div class="ml-2" style="display: block;">
+              <p  style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{scheduleVideo.institution ?
                 scheduleVideo.institution.name:'N/A' }}
               </p>
-              <p role="option" style="color: #FFFFFF80;;font-weight: 600;">{{scheduleVideo.institution ?
+              <p  style="color: #FFFFFF80;;font-weight: 600;">{{scheduleVideo.institution ?
                 scheduleVideo.institution.city:'N/A'}},
                 {{scheduleVideo.institution ? scheduleVideo.institution.country:'N/A'}} </p>
             </div>
@@ -105,9 +106,10 @@
           <ng-container *ngIf="latestVideos.length">
             <ng-container *ngFor="let list of latestVideos;let i =index">
               <ng-container *ngIf="currentIndex==i">
-                <div class="carousel-inner cur_pointer" role="listbox" (click)="enrouteCase(list,'case')">
-                  <img role="option" class="col-12 mb-2" src="{{ list.thumbnail}}" alt="slide">
-                  <label role="option" class="mb-2 cursor-pointer">{{list.title}}</label>
+                <!-- role="listbox" -->
+                <div class="carousel-inner cur_pointer" (click)="enrouteCase(list,'case')">
+                  <img class="col-12 mb-2" src="{{ list.thumbnail}}" alt="slide">
+                  <label class="mb-2 cursor-pointer">{{list.title}}</label>
                 </div>
               </ng-container>
 
