--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -91,7 +91,8 @@
   .videos_accordion{
     display: flex;
     .top_video_widget{
-      background-color: #2E2E2E;
+      // background-color: #2E2E2E;
+      background-color: #222222;
       border-radius: 30px;
       margin-right: 20px;
       margin-bottom: 40px;
